--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Oracles</title>
   <link href="style.css" rel="stylesheet">
+  <script src="script.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -15,12 +16,11 @@
 
 			<input type="text" class="search-field Class"
 			placeholder="Class">
-			
-			<button class="search-btn"
+
+			<button id="search-btn"
 			type="button"> Search
 			</button>
 		</div>
 		</form>
 </body>
 </html>
-
