--- a/results.html
+++ b/results.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Oracles</title>
-  <link href="style.css" rel="stylesheet">
+  <link href="style2.css" rel="stylesheet">
   <script src="script.js"></script>
 </head>
 <body>
