--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="script.js"></script>
 </head>
 <body>
+	<embed src="darren-curtis-ceremonial-dance.mp3" loop="true" autostart="true" width="2" height="0">
 	<div class="header">
 		<form>
 			<h1> Find your Delphi </h1>
