--- a/results.html
+++ b/results.html
@@ -8,7 +8,7 @@
 <body>
 	<embed src="darren-curtis-ceremonial-dance.mp3" loop="true" autostart="true" width="2" height="0">
 	<div class="header" id = "infoPage">
-			<h1> Education is very often a path we take to make clear the parts of us that we seek to define, and dispel those that we fear. It is a long and winding road, one in which you find much and lose all, consumed by a flame from which you shall rise, reborn. Yet in this path, one that is full of life and learning, nebulous but full of hope, one searches for answers. But ultimately, the hands with which this meaning is shaped, the heat with which it is forged................................................................................................. JK Only you can decide your path :)</h1>
+			<h1> Education is very often a path we take to make clear the parts of us that we seek to define, and dispel those that we fear. It is a long and winding road, one in which you find much and lose all, consumed by a flame from which you shall rise, reborn. Yet in this path, one that is full of life and learning, nebulous but full of hope, one searches for answers. But ultimately, the hands with which this meaning is shaped, the heat with which it is forged........................................................................................ JK Only you can decide your path :)</h1>
   </div>
 </body>
 </html>
